[gd_scene load_steps=8 format=2]

[ext_resource path="res://graphics/simple-geometric-shapes.png" type="Texture" id=1]
[ext_resource path="res://gdscripts/Agent.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mouth.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/AgentStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/SmellDetector.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 102.226

[node name="Agent" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
collision_mask = 71
script = ExtResource( 2 )

[node name="AgentStats" parent="." instance=ExtResource( 4 )]

[node name="BodySprite" type="Sprite" parent="."]
modulate = Color( 0.282353, 0.415686, 0.780392, 1 )
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 201, 201 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Mouth" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -99 )

[node name="AntennaLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( -33, -140 )
rotation = -0.523599

[node name="AntennaRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 33, -140 )
rotation = 0.523599

[node name="TactileSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TactileSensor"]
shape = SubResource( 2 )
[connection signal="agent_dead" from="AgentStats" to="." method="_on_death"]
[connection signal="edible_consumed" from="Mouth" to="." method="_on_edible_consumed"]
[connection signal="smell_detected" from="AntennaLeft" to="." method="_on_smell_detected"]
[connection signal="smell_lost" from="AntennaLeft" to="." method="_on_smell_lost"]
[connection signal="smell_detected" from="AntennaRight" to="." method="_on_smell_detected"]
[connection signal="smell_lost" from="AntennaRight" to="." method="_on_smell_lost"]
[connection signal="body_entered" from="TactileSensor" to="." method="_on_tactile_event"]
[connection signal="body_exited" from="TactileSensor" to="." method="_on_tactile_event_ends"]
